--- a/index/manage/manage.wxml
+++ b/index/manage/manage.wxml
@@ -1,4 +1,7 @@
 <import src="../../libs/weimport.wxml" />
+<view class="navigationBar">
+  <view class="navigationBar__title">店铺管理</view>
+</view>
 <view class="page">
   <view class="page__hd">
     <swiper class="swiper_box" indicator-dots="{{false}}" autoplay="{{true}}">
