--- a/app.wxss
+++ b/app.wxss
@@ -11,9 +11,6 @@ page{
   padding: 16rpx;
 }
 .navigationBar {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
   position: fixed;
   top:0;
   z-index: 500;
@@ -22,16 +19,25 @@ page{
   background-color: #F5F5F5;
   border-bottom: 1rpx solid #CCCCCC;
 }
-.navigationBar__title {
-  display: inline-block;
-  margin-top: 40rpx;
-  margin-left: 50rpx;
-  font-size: 30rpx;
-  width: 380rpx;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  word-wrap: normal;
+.navigationBar__column {
+  position: relative;
+  margin-top: 36rpx;
+  margin-left: 30rpx;
+  word-wrap: break-word;
+  font-size: 26rpx;
+  width: 560rpx;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+          align-items: center;
+}
+.navigationBar__icon {
+  margin-right: 20rpx;
+  vertical-align: middle;
+  width: 54rpx;
+  height: 54rpx;
 }
 .navigationBar__price {
   display: inline-block;
