--- a/index/home/home.wxml
+++ b/index/home/home.wxml
@@ -1,15 +1,18 @@
 <import src="../../libs/weimport.wxml" />
 
 <view class="navigationBar">
-  <view class="navigationBar__title">扶贫济困，共享良品</view>
-  <view wx:if="{{signuped}}">
-    <button  class="weui-btn" style="display:inline-block" type="primary" size="mini" bindtap="changeTiring">{{tiringRoom ? '退出' : '进入'}}管理界面</button>
+  <view class="navigationBar__column">
+    <template is="navBarLogo" data="{{srcurl:'../../images/logo.png'}}"/>
+    <view class="weui-cell__bd">扶贫济困，共享良品</view>
+    <view class="weui-cell__ft weui-cell__ft_in-access">
+      <view wx:if="{{signuped}}">
+        <button class="weui-btn" style="display:inline-block" size="mini" bindtap="changeTiring">{{tiringRoom ? '退出' : '进入'}}管理界面</button>
+      </view>
+      <view wx:else>
+        <button size="mini" open-type="getUserInfo" bindgetuserinfo="userInfoHandler">合伙人注册</button>
+      </view>
+    </view>
   </view>
-  <view wx:else>
-    <button open-type="getUserInfo" bindgetuserinfo="userInfoHandler">合伙人注册</button>
-  </view>
-
-
 </view>
 <view class="page">
   <view class="page__hd">
