--- a/index/manage/manage.wxml
+++ b/index/manage/manage.wxml
@@ -1,6 +1,6 @@
 <import src="../../libs/weimport.wxml" />
 <view class="navigationBar">
-  <view class="navigationBar__title">店铺管理</view>
+  <view class="navigationBar__column">店铺管理</view>
 </view>
 <view class="page">
   <view class="page__hd">
