--- a/index/home/home.wxml
+++ b/index/home/home.wxml
@@ -2,14 +2,14 @@
 
 <view class="navigationBar">
   <view class="navigationBar__column">
-    <template is="navBarLogo" data="{{srcurl:'../../images/logo.png'}}"/>
+    <template is="navBarLogo"/>
     <view class="weui-cell__bd">扶贫济困，共享良品</view>
     <view class="weui-cell__ft weui-cell__ft_in-access">
       <view wx:if="{{signuped}}">
         <button class="weui-btn" style="display:inline-block" size="mini" bindtap="changeTiring">{{tiringRoom ? '退出' : '进入'}}管理界面</button>
       </view>
       <view wx:else>
-        <button size="mini" open-type="getUserInfo" bindgetuserinfo="userInfoHandler">合伙人注册</button>
+        <button style="display:inline-block" size="mini" open-type="getUserInfo" bindgetuserinfo="userInfoHandler">合伙人注册</button>
       </view>
     </view>
   </view>
