--- a/index/manage/manage.wxml
+++ b/index/manage/manage.wxml
@@ -8,6 +8,7 @@
   </view>
 </view>
 <view class="page">
+<view wx:if="{{tiringRoom}}">
   <view class="page__hd">
     <swiper class="swiper_box" indicator-dots="{{false}}" autoplay="{{true}}">
       <block wx:for="{{mSwiper}}" wx:key="{{index}}">
@@ -18,7 +19,6 @@
       </block>
     </swiper>
   </view>
-
   <view class="page__bd">
     <template is="showgrids" data="{{grids}}"/>
     <view class="weui-tab">
@@ -26,5 +26,37 @@
       <template is="tabPanel" data="{{ tPage: fLength ? mPage[pageCk] : mPage , pageData , pNo }}"/>
     </view>
   </view>
-
+</view>
+<view wx:else>
+  <view class="userinfo">
+    <image class="userinfo-avatar" src="{{user.avatarUrl}}" background-size="cover"></image>
+    <text class="userinfo-nickname">{{user.nickName}}</text>
+  </view>
+  <view class="order-area">
+    <view bindtap="readorder" class="order" data-status="1">
+      <image src="../../../../images/fahuo.png" />
+      <text>待发货</text>
+    </view>
+    <view bindtap="delivergoods" class="order" data-status="2">
+      <image src="../../../../images/delivergoods.png" />
+      <text>已发货</text>
+    </view>
+    <view bindtap="finish" class="order" data-status="3">
+      <image src="../../../../images/finish.png" />
+      <text>已完成</text>
+    </view>
+  </view>
+  <view bindtap="navigateToAddress" class="tableviewcell">
+    <image src="../../../../images/icon_address.png" />
+    <text>收货地址</text>
+  </view>
+  <view bindtap="kefu" class="tableviewcell">
+    <image src="../../../../images/icon_phonelogin.png" />
+    <text>联系客服</text>
+  </view>
+  <view bindtap="money" class="tableviewcell">
+    <image src="../../../../images/icon_phonelogin.png" />
+    <text>提现</text>
+  </view>
+</view>
 </view>
