--- a/util/goodssct/goodssct.wxml
+++ b/util/goodssct/goodssct.wxml
@@ -1,4 +1,5 @@
 <import src="../../libs/weimport.wxml" />
+<template is="navBarReturn" data="{{...navBarTitle}}"/>
 <view class="page">
   <view class="page__bd">
     <view class="weui-tab__panel">
