--- a/util/mapsunit/mapsunit.wxml
+++ b/util/mapsunit/mapsunit.wxml
@@ -1,4 +1,5 @@
 <import src="../../libs/weimport.wxml" />
+<template is="navBarReturn" data="{{...navBarTitle}}"/>
 <view class="page">
   <view class="page__hd">
 <map id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="{{scale}}" bindcontroltap="controltap" markers="{{markers}}" bindmarkertap="markertap"
