--- a/util/signup/signup.wxml
+++ b/util/signup/signup.wxml
@@ -1,4 +1,5 @@
 <import src="../../libs/weimport.wxml" />
+<template is="navBarReturn" data="{{...navBarTitle}}"/>
 <wxs src="signmsg.wxs" module="tk" />
 <view class="page">
   <view class="page__hd">
