--- a/util/wxchat/wxchat.wxml
+++ b/util/wxchat/wxchat.wxml
@@ -1,4 +1,5 @@
 <import src="../../libs/weimport.wxml"/>
+<template is="navBarReturn" data="{{...navBarTitle}}"/>
 <view class="page">
   <view class="page__bd">
       <scroll-view scroll-y="true" style="left:5px; height:{{sysheight}}px; width:{{syswidth}}px ; border:2px solid #F00" >
