--- a/index/home/home.wxml
+++ b/index/home/home.wxml
@@ -1,10 +1,9 @@
 <import src="../../libs/weimport.wxml" />
-
 <view class="navigationBar">
   <view class="navigationBar__column">
     <template is="navBarLogo"/>
     <view class="weui-cell__bd">扶贫济困，共享良品</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access">
+    <view class="weui-cell__ft">
       <view wx:if="{{signuped}}">
         <button class="weui-btn" style="top:6rpx" size="mini" bindtap="changeTiring">{{tiringRoom ? '退出' : '进入'}}管理界面</button>
       </view>
