--- a/app.wxss
+++ b/app.wxss
@@ -15,17 +15,17 @@ page{
   top:0;
   z-index: 500;
   width: 100%;
-  height: 102rpx;
+  height: 106rpx;
   background-color: #F5F5F5;
   border-bottom: 1rpx solid #CCCCCC;
 }
 .navigationBar__column {
   position: relative;
-  margin-top: 36rpx;
-  margin-left: 30rpx;
-  word-wrap: break-word;
-  font-size: 26rpx;
-  width: 560rpx;
+  margin-top: 38rpx;
+  margin-left: 20rpx;
+  white-space: nowrap;
+  font-size: 32rpx;
+  width: 540rpx;
   display: -webkit-box;
   display: -webkit-flex;
   display: flex;
@@ -36,17 +36,16 @@ page{
 .navigationBar__icon {
   margin-right: 10rpx;
   vertical-align: middle;
-  width: 54rpx;
-  height: 54rpx;
+  width: 60rpx;
+  height: 60rpx;
 }
 .navigationBar__item {
   position: relative;
-
   width: 10em;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
           flex: 1;
-  padding: 26rpx 0;
+  padding: 6rpx 0;
   text-align: center;
 
 }
@@ -68,17 +67,15 @@ page{
   display: flex;
   width: 480rpx;
   border-radius: 30rpx;
-  background: #FFFFFF;
+  background-color: #FFFFFF;
   border: 1rpx solid #E6E6EA;
 }
-.navigationBar__input {
-  position: relative;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-          flex: 1;
-  width: 430rpx;
-  padding: 10rpx 0;
-  text-align: center;
+.navSearchBar__input {
+  height:1.4rem;
+  text-overflow:clip;
+  overflow:hidden;
+  white-space:nowrap;
+  width:400rpx;
 }
 .navigationBar__btn_icon {
   position: inline-block;
@@ -87,13 +84,14 @@ page{
   padding: 0 0;
   line-height: 46rpx;
   width: 50rpx;
-  color: #3CC51F;
+  background-color:#FFFFFF;
+  border-color: #FFFFFF;
   text-align: center;
 }
 .navigationBar__price {
   display: inline-block;
 	color: #f60;
-  margin-top: 40rpx;
+  margin-top: 10rpx;
 	margin-left: 10rpx;
   font-size: 34rpx;
 }
