--- a/index/marketing/marketing.wxml
+++ b/index/marketing/marketing.wxml
@@ -12,7 +12,7 @@
       <view class="navSearchBar__form">
       <input class="navSearchBar__input" name="searchGoods" placeholder="搜索" />
       <button class="navigationBar__btn_icon" formType="submit">
-        <icon class="weui-icon-radio" type="search" size="18"/>
+        <icon style="margin-top:12rpx;margin-bottom:-8rpx" type="search" size="15"/>
       </button>
       </view>
     </view>
@@ -66,20 +66,24 @@
   <view class="page__bd">
     <view wx:if="{{tiringRoom}}">
       <template is="showgrids" data="{{grids}}"/>
-    </view>
-    <view wx:else class="page__title">经典推荐</view>
-    <view wx:if="{{pMasterNo<0}}">
+      <view class="page__title">经典推荐</view>
       <template is="tabPanel" data="{{ tPage: goodsIndex , pageData , pNo }}"/>
     </view>
     <view wx:else>
-      <view wx:if="{{iClicked!='0'}}">
-        <template is="tabPanel" data="{{ tPage: goodsPage[iClicked] , pageData , pNo }}"/>
+      <view wx:if="{{pMasterNo<0}}">
+        <view class="page__title">经典推荐</view>
+        <template is="tabPanel" data="{{ tPage: goodsIndex , pageData , pNo }}"/>
       </view>
       <view wx:else>
-        <view wx:for="{{droneId[pMasterNo].slaveId}}" wx:key="{{index}}" wx:for-item="sForId">
-          <view wx:if="{{goodsPage[sForId]}}">
-            <template is="s_h3" data="{{ p: slave[sForId].uName , c:slave[sForId].title }}"/>
-            <template is="tabPanel" data="{{ tPage: goodsPage[sForId] , pageData , pNo }}"/>
+        <view wx:if="{{iClicked!='0'}}">
+          <template is="tabPanel" data="{{ tPage: goodsPage[iClicked] , pageData , pNo }}"/>
+        </view>
+        <view wx:else>
+          <view wx:for="{{droneId[pMasterNo].slaveId}}" wx:key="{{index}}" wx:for-item="sForId">
+            <view wx:if="{{goodsPage[sForId]}}">
+              <template is="s_h3" data="{{ p: slave[sForId].uName , c:slave[sForId].title }}"/>
+              <template is="tabPanel" data="{{ tPage: goodsPage[sForId] , pageData , pNo }}"/>
+            </view>
           </view>
         </view>
       </view>
