--- a/inputedit/shopData/shopData.wxml
+++ b/inputedit/shopData/shopData.wxml
@@ -7,21 +7,19 @@
         <view class="navigationBar__title">{{item}}</view>
       </view>
     </block>
-    <view class="weui-navbar__slider" style="left:{{230/fLength+36}}rpx; transform: translateX(0rpx); -webkit-transform: translateX({{pageCk*460/fLength}}rpx)"></view>
+    <view class="weui-navbar__slider" style="top:58rpx;left:{{230/fLength+20}}rpx; transform: translateX(0rpx); -webkit-transform: translateX({{pageCk*460/fLength}}rpx)"></view>
   </view>
 </view>
 <view class="page">
   <view wx:if="{{pageCk==0}}">
     <view class="page__hd">
-      <view class="page__title weui-cell">
-        <view class="weui-cell__hd">岗位选择</view>
-        <view class="weui-cell__bd">
+      <view class="weui-cell">
           <button open-type="share">招募{{mRols[0][reqrole[0]]}}条线{{mRols[1][reqrole[1]]}}岗</button>
-        </view>
       </view>
+      <view class="page__title">岗位选择：</view>
     </view>
     <view class="page__bd page__bd_spacing">
-      <picker-view indicator-style="height: 60rpx;" style="width: 100%; height: 300rpx;" value="{{reqrole}}" bindchange="fSpicker">
+      <picker-view indicator-style="height: 60rpx;" style="width: 100%; height: 200rpx;" value="{{reqrole}}" bindchange="fSpicker">
         <picker-view-column>
           <view wx:for="{{mRols[0]}}" wx:key="{{index}}" style="line-height: 60rpx">{{item}} 条线</view>
         </picker-view-column>
@@ -49,10 +47,8 @@
         </view>
       </view>
     </block>
-    <view class="page__hd page__bd_spacing">
-      <view class="page__title"> 岗位申请：</view>
-    </view>
-    <view class="page__bd">
+    <view class="page__title"> 岗位申请人：</view>
+    <view class="page__bd page__bd_spacing">
       <block wx:for="{{applyUser[0]}}" wx:key="{{createdAt}}" class="weui-cell">
         <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
           <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
@@ -70,12 +66,10 @@
   </view>
   <view wx:else>
     <view class="page__hd">
-      <view class="page__title weui-cell">
-        <view class="weui-cell__hd">已签约渠道合伙人</view>
-        <view class="weui-cell__bd">
+    <view class="weui-cell">
           <button open-type="share">招募渠道合伙人</button>
         </view>
-      </view>
+      <view class="page__title">已签约渠道合伙人</view>
     </view>
     <view class="page__bd page__bd_spacing">
       <block wx:for="{{roleUser[1]}}" wx:key="{{index}}" class="weui-cell">
@@ -90,9 +84,7 @@
         </view>
       </block>
     </view>
-    <view class="page__hd">
-      <view class="page__title">应募渠道合伙人</view>
-    </view>
+    <view class="page__title">应募渠道合伙人</view>
     <view class="page__bd page__bd_spacing">
       <block wx:for="{{applyUser[0]}}" wx:key="{{createdAt}}" class="weui-cell">
         <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
