--- a/pages/vprocedure/vprocedure.wxml
+++ b/pages/vprocedure/vprocedure.wxml
@@ -1,9 +1,11 @@
 <import src="../../libs/weimport.wxml" />
+<import src="../../libs/wedetail.wxml" />
 <view class="navigationBar">
-  <navigator open-type="navigateBack" delta="1">
-    <view class="navigationBar__column">＜ {{vData.uName}}</view>
-  </navigator>
-  <view wx:if="{{pno=='goods'}}" class="navigationBar__price">￥ price元</view>
+  <view class="navigationBar__column">
+    <template is="navBackIcon"/>
+    <view class="weui-cell__bd">{{vData.uName}}</view>
+    <view wx:if="{{pno=='goods'}}" class="navigationBar__price">￥{{vData.price}}</view>
+  </view>
 </view>
 <view class="page" id="approval-{{pNo}}">
   <view class="page__bd page__ac_spacing">
